--- a/campaign/templates/app/campaign/options.html
+++ b/campaign/templates/app/campaign/options.html
@@ -154,7 +154,7 @@
                                min="1"
                                max="1000"
                                class="input input-bordered bg-white w-24 text-center"
-                               onchange="updateOption('dailyLimit', this.value)" />
+                               onblur="updateOption('dailyLimit', this.value)" />
                     </div>
                 </div>
             </form>
