--- a/campaign/templates/app/products/products.html
+++ b/campaign/templates/app/products/products.html
@@ -87,7 +87,7 @@
                             </a>
                         </td>
                         <td>
-                            <span class="text-sm text-gray-500">3</span>
+                            <span class="text-sm text-gray-500">{{ product.product_campaigns.count }}</span>
                         </td>
                         <td>
                             <div class="flex items-center gap-2">
